(include_subdirs no)

; virtual library to allow js build (for gobview) without dune-site
; dune-site seems to be incompatible with js_of_ocaml
;  File "gobview/src/.App.eobjs/dune_site_data.ml-gen", line 1:
;  Error: Could not find the .cmi file for interface
;        gobview/src/.App.eobjs/dune_site_data.ml-gen.
(library
  (name goblint_sites)
  (public_name goblint.sites)
  (virtual_modules goblint_sites)
  (libraries fpath))
