(executables
 (names yamlWitnessStrip yamlWitnessStripDiff multilibConfigure)
 (libraries
   batteries.unthreaded
   goblint-cil
   goblint_std
   goblint_lib
   yaml)
 (flags :standard -open Goblint_std)
 (preprocess (pps ppx_deriving.std)))

(rule
 (target multilibAvailable)
 (action (with-stdout-to %{target} (run ./multilibConfigure.exe))))
