(include_subdirs unqualified)

(library
 (name goblint_cdomain_value)
 (public_name goblint.cdomain.value)
 (wrapped false) ; TODO: wrap
 (libraries
   batteries.unthreaded
   goblint_std
   goblint_logs
   goblint_common
   goblint_config
   goblint_library
   goblint_domain
   goblint_incremental
   goblint-cil)
 (flags :standard -open Goblint_std -open Goblint_logs)
 (preprocess
  (pps
    ppx_deriving.std
    ppx_deriving_hash
    ppx_deriving_yojson))
 (instrumentation (backend bisect_ppx)))

(documentation)
