(include_subdirs no)

(library
 (name goblint_parallel)
 (public_name goblint.parallel)
 (modules gobMutex threadpool domainsafeLazy data)
 (libraries
   batteries
   (select gobMutex.ml from
      (domainslib -> gobMutex.domainslib.ml)
      ( -> gobMutex.no-domainslib.ml)
   )
   (select threadpool.ml from 
      (domainslib -> threadpool.domainslib.ml)
      (-> threadpool.no-domainslib.ml)
   )
   domain_shims
   domain-local-await)
 )
