(rule
 (aliases runtest runaprontest)
 (enabled_if %{lib-available:apron})
 (deps
   (package goblint)
   ../../../goblint ; update_suite calls local goblint
   (:update_suite ../../../scripts/update_suite.rb)
   (glob_files ??-*.c))
 (locks /update_suite)
 (action
  (chdir ../../..
   (progn
     (run %{update_suite} nla-sqrt -q)))))

(cram
 (deps (glob_files *.c)))

(cram
 (applies_to 36-svcomp-arch)
 (enabled_if (<> %{system} macosx))) ; https://dune.readthedocs.io/en/stable/reference/boolean-language.html
