(rule
 (aliases runtest runaprontest)
 (enabled_if %{lib-available:apron})
 (deps
   (package goblint)
   ../../../goblint ; update_suite calls local goblint
   (:update_suite ../../../scripts/update_suite.rb)
   (glob_files ??-*.c)
   (glob_files ??-*.yml)) ; excluding witness.yml, etc. which might exist due to running update_suite outside of dune
 (locks /update_suite)
 (action
  (chdir ../../..
   (progn
     (run %{update_suite} apron-unassume-interval)
     (run %{update_suite} apron-unassume-branch)
     (run %{update_suite} apron-unassume-global)
     (run %{update_suite} apron-unassume-priv)
     (run %{update_suite} apron-unassume-priv2)
     (run %{update_suite} apron-unassume-strengthening)
     (run %{update_suite} mine-tutorial-ex4.10)
     (run %{update_suite} hh-ex3)
     (run %{update_suite} bh-ex1-poly)
     (run %{update_suite} apron-unassume-precheck)
     (run %{update_suite} apron-tracked-global-annot)))))

(cram
 (deps (glob_files *.c) (glob_files ??-*.yml)))
